[workspace]
resolver = "2"
members = [
  "crates/sui-prover",
  "crates/move-model",
  "crates/move-stackless-bytecode",
  "crates/move-prover-boogie-backend",
  "crates/lambda-boogie-handler",
]

default-members = ["crates/sui-prover"]
[profile.release]
debug = 1
split-debuginfo = 'packed'
strip = 'debuginfo'
panic = 'abort'

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(msim)',
  'cfg(fail_points)',
] }
dead_code = "allow"
unused_variables = "allow"
unused_imports = "deny"
unused_mut = "deny"
mismatched_lifetime_syntaxes = "allow"

[workspace.dependencies]
move-model = { path = "crates/move-model" }
move-stackless-bytecode = { path = "crates/move-stackless-bytecode" }
move-prover-boogie-backend = { path = "crates/move-prover-boogie-backend" }

anyhow = "1.0.71"
clap = { version = "4.4", features = ["derive", "wrap_help", "env"] }
colored = "2.0.0"
tracing = "0.1.37"
bimap = "0.6.2"
serde = { version = "1.0.144", features = ["derive", "rc"] }
toml = { version = "0.7.4", features = ["preserve_order"] }
async-trait = "0.1.61"
itertools = "0.13.0"
rand = "0.8.5"
futures = "0.3.28"
regex = "1.7.1"
telemetry-subscribers = "0.4.1" # Assuming a placeholder version; please replace if you have a specific one
assert_cmd = "2.0.6"
jsonrpsee = { version = "0.24.7", features = [
  "server",
  "macros",
  "ws-client",
  "http-client",
  "jsonrpsee-core",
] }
tempfile = "3.3.0"
log = { version = "0.4.14", features = ["serde"] }
num = "0.4.0"
tera = "1.16.0"
pretty = "0.10.0"
simplelog = "0.9.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
insta = "1.34"
glob = "0.3"
termcolor = "1.1.3"
internment = { version = "0.5.0", features = [ "arc"] }
ethnum = "1.0.4"
im = "15.1.0"
paste = "1.0.15"
petgraph = "0.8.3"
tokio = { version = "1.43.0", features = ["full"] }
datatest-stable = "0.3.2"
sha2 = "0.10.9"
dir-test = "0.4.1"
indexmap = "2.12.0"

move-stdlib = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-docgen = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-package = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-package-alt = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-package-alt-compilation = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-compiler = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-ir-types = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-core-types = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-symbol-pool = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-disassembler = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-binary-format = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-bytecode-source-map = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
move-command-line-common = { git = "https://github.com/asymptotic-code/sui", branch = "next" }
