[package]
name = "sui-prover"
authors = ["Asymptotic <info@asymptotic.tech>"]
license = "Apache-2.0"
publish = false
edition = "2021"
version = "0.0.2"

[lints]
workspace = true

[dependencies]
itertools.workspace = true
log.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
tracing.workspace = true
regex.workspace = true
serde.workspace = true
toml.workspace = true
codespan-reporting.workspace = true
telemetry-subscribers.workspace = true

move-core-types.workspace = true
move-compiler.workspace = true
move-prover-boogie-backend.workspace = true
move-package.workspace = true
move-package-alt.workspace = true
move-package-alt-compilation.workspace = true
move-model.workspace = true
move-symbol-pool.workspace = true
move-stackless-bytecode.workspace = true
indexmap.workspace = true
glob.workspace = true
insta.workspace = true
termcolor.workspace = true
sha2.workspace = true
petgraph.workspace = true
dir-test.workspace = true
tempfile.workspace = true

tokio = { workspace = true, features = ["full"] }

openai_api_rust = "0.1.9"
